--- a/index.html
+++ b/index.html
@@ -1,10 +1,201 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="/fonts/fonts.css"/>
+    <link rel="stylesheet" href="/styles/global.css"/>
+    <link rel="stylesheet" href="/styles/style.css"/>
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a href="#0"> главная </a>
+          </li>
+          <li class="header__links-list-item">
+            <a href="#0"> посмотреть лоты </a>
+          </li>
+          <li class="header__links-list-item">
+            <a href="#0"> об аукционе </a>
+          </li>
+        </ul>
+      </nav>
+      <a href="#0">
+        <img
+          src="/images/logo-black.svg"
+          alt="логотип компании"
+          class="header__logo-image"
+        />
+      </a>
+      <address class="header__address">
+        <div class="address">
+          <a href="#0"> +9 999 555 5555 </a>
+        </div>
+        <div class="address">
+          <a href="#0"> info@sobaka.ge </a>
+        </div>
+        <div>наб. Принсенграхт 263-265, Амстердам</div>
+      </address>
+    </header>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="title aligned-text">
+            <span>о</span><span class="letter-spacing-extended">но</span>
+          </span>
+          <span class="title aligned-text_center">
+            <span>те</span><span class="letter-spacing-extended">б</span
+            ><span class="no-letter-spacing">е</span>
+          </span>
+          <span class="title aligned-text_right">
+            <span class="letter-spacing-extended">н</span><span>aд</span
+            ><span class="no-letter-spacing">о</span>
+          </span>
+        </h1>
+        <h2 class="cover__description">
+          <span class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </span>
+          <button class="bet-button">Сделать ставку</button>
+        </h2>
+      </section>
+      <section class="lots">
+        <h3 class="lots__heading">Лоты</h3>
+        <ul class="lots__card-list">
+          <li>
+            <a href="" class="card-link">
+              <article class="card card_type_film">
+                <div class="overlay-card"></div>
+                <h4 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h4>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li>
+            <a href="" class="card-link">
+              <article class="card card_type_book">
+                <div class="overlay-card"></div>
+                <h5 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h5>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li>
+            <a href="" class="card-link">
+              <article class="card card_type_picture">
+                <div class="overlay-card"></div>
+                <h6 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h6>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <p class="lots__look-more-link">
+          <a href="#0">посмотреть больше</a>
+        </p>
+      </section>
+      <section class="about">
+        <div class="logo-conteiner">
+          <div class="about__logo"></div>
+        </div>
+        <div class="about__column">
+          <h6 class="about__title">Об аукционе</h6>
+          <div class="about__text">
+            <p>
+              Здесь вы не встретите очередное пафосное собрание невероятно
+              дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+              на один аукцион. Потому что кому нужен дневник девочки-подростка
+              или картина, которую может нарисовать даже ребёнок? Кому нужны все
+              эти странные вещи, созданные любителями?
+            </p>
+            <p>
+              Слишком сложные или, наоборот, слишком простые. Опережающие своё
+              время. В пух и прах растерзанные критиками. Непринятые и
+              непонятые. Когда-то они казались просто неудачными. Но, несмотря
+              на критику, кажущуюся простоту или сложность, сейчас без этих
+              лотов невозможно представить современную культуру. Когда в эти
+              вещи не верил никто, продолжали верить их создатели. И сейчас эти
+              лоты стали культовыми.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <address class="footer__address">
+        <div class="address">
+          <a href="#0"> +9 999 555 5555 </a>
+        </div>
+        <div class="address">
+          <a href="info@sobaka.ge"> info@sobaka.ge </a>
+        </div>
+        <div>наб. Принсенграхт 263-265, Амстердам</div>
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__links-list">
+          <li class="footer__links-list-item">
+            <a href="#0" class="footer__menu-link_active"> главная </a>
+          </li>
+          <li class="footer__links-list-item">
+            <a href="#0"> посмотреть лоты </a>
+          </li>
+          <li class="footer__links-list-item">
+            <a href="#0"> об аукционе </a>
+          </li>
+        </ul>
+      </nav>
+      <a href="#0">
+        <ul class="footer__social-list">
+          <li>
+            <img
+              src="/images/yt.svg"
+              alt="ссылка на ю-туб"
+              class="footer__social-icon"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/vk.svg"
+              alt="ссылка на вк"
+              class="footer__social-icon"
+            />
+          </li>
+          <li>
+            <img
+              src="/images/pinterest.svg"
+              alt="ссылка на принтерест"
+              class="footer__social-icon"
+            />
+          </li>
+        </ul>
+      </a>
+    </footer>
+  </body>
 </html>
