--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="/fonts/fonts.css"/>
-    <link rel="stylesheet" href="/styles/global.css"/>
-    <link rel="stylesheet" href="/styles/style.css"/>
+    <link rel="stylesheet" href="./fonts/fonts.css"/>
+    <link rel="stylesheet" href="./styles/global.css"/>
+    <link rel="stylesheet" href="./styles/style.css"/>
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
@@ -26,17 +26,17 @@
       </nav>
       <a href="#0">
         <img
-          src="/images/logo-black.svg"
+          src="./images/logo-black.svg"
           alt="логотип компании"
           class="header__logo-image"
         />
       </a>
       <address class="header__address">
         <div class="address">
-          <a href="#0"> +9 999 555 5555 </a>
+          <a href="tel:+99995555555"> +9 999 555 5555 </a>
         </div>
         <div class="address">
-          <a href="#0"> info@sobaka.ge </a>
+          <a href="mailto:info@sobaka.ge"> info@sobaka.ge </a>
         </div>
         <div>наб. Принсенграхт 263-265, Амстердам</div>
       </address>
@@ -151,10 +151,10 @@
     <footer class="footer">
       <address class="footer__address">
         <div class="address">
-          <a href="#0"> +9 999 555 5555 </a>
+          <a href="tel:+99995555555"> +9 999 555 5555 </a>
         </div>
         <div class="address">
-          <a href="info@sobaka.ge"> info@sobaka.ge </a>
+          <a href="mailto:info@sobaka.ge"> info@sobaka.ge </a>
         </div>
         <div>наб. Принсенграхт 263-265, Амстердам</div>
       </address>
@@ -175,21 +175,21 @@
         <ul class="footer__social-list">
           <li>
             <img
-              src="/images/yt.svg"
+              src="./images/yt.svg"
               alt="ссылка на ю-туб"
               class="footer__social-icon"
             />
           </li>
           <li>
             <img
-              src="/images/vk.svg"
+              src="./images/vk.svg"
               alt="ссылка на вк"
               class="footer__social-icon"
             />
           </li>
           <li>
             <img
-              src="/images/pinterest.svg"
+              src="./images/pinterest.svg"
               alt="ссылка на принтерест"
               class="footer__social-icon"
             />
