--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
+    <div class="container">
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
@@ -163,7 +164,6 @@
           </li>
         </ul>
       </nav>
-
       <ul class="footer__social-list">
         <li>
           <a href="#0">
@@ -194,5 +194,6 @@
         </li>
       </ul>
     </footer>
+  </div>
   </body>
 </html>
