--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
       <section class="lots">
         <h3 class="lots__heading">Лоты</h3>
         <ul class="lots__card-list">
-          <li>
+          <li class="wraper"> <!-- Этот и следующие 3 li , добавлен класс для стилей адаптивного переноса флекс гроу-->
             <a href="#" class="card-link">
               <article class="card card_type_film">
                 <div class="overlay"></div>
-                <h1 class="card__title">
+                <h4 class="card__title">
                   Фильм режиссёра, который бросил киношколу
-                </h1>
+                </h4>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -81,13 +81,13 @@
               </article>
             </a>
           </li>
-          <li>
-            <a href="" class="card-link">
+          <li class="wraper">
+            <a href="#" class="card-link">
               <article class="card card_type_book">
                 <div class="overlay"></div>
-                <h1 class="card__title">
+                <h4 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </h1>
+                </h4>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -99,13 +99,13 @@
               </article>
             </a>
           </li>
-          <li>
-            <a href="" class="card-link">
+          <li class="wraper">
+            <a href="#" class="card-link">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
-                <h1 class="card__title">
+                <h4 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </h1>
+                </h4>
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -123,7 +123,7 @@
           <div class="about__logo"></div>
         </div>
         <div class="about__column">
-          <h1 class="about__title">Об аукционе</h1>
+          <h5 class="about__title">Об аукционе</h5>
           <div class="about__text">
             <p>
               Здесь вы не встретите очередное пафосное собрание невероятно
